--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <link rel="stylesheet" href="./css/header.css">  
   <link rel="stylesheet" href="./css/main.css">  
   <link rel="manifest" href="manifest.json" />
-  //<script type="module">
+  <script type="module">
   //  import "https://cdn.jsdelivr.net/npm/@pwabuilder/pwaupdate";
  //   const el = document.createElement("pwa-update");
  //   document.body.appendChild(el);
- // </script>
+  
 if ("serviceWorker" in navigator) {
           //서비스워커가 있을때(서비스워커 지원여부)
           navigator.serviceWorker
@@ -25,6 +25,7 @@ if ("serviceWorker" in navigator) {
               console.log("serviceWorker 설치에 실패했습니다", error);
             });
         }
+</script>
 </head>
 <body class="main">
   <div id="loadingimg" class="intro">
